# ball_follower

./: .gitignore  README.md  map_save.yaml
install/: local_setup.sh  setup.sh
install/ball_follower/lib/ball_follower/: bot_node  laser_remapper_node  map_publisher_node
install/ball_follower/share/ament_index/resource_index/package_run_dependencies/: ball_follower
install/ball_follower/share/ament_index/resource_index/parent_prefix_path/: ball_follower
install/ball_follower/share/ball_follower/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ball_follower/share/ball_follower/cmake/: ball_followerConfig-version.cmake  ball_followerConfig.cmake
install/ball_follower/share/ball_follower/config/: default.rviz  gazebo_params.yaml  map_server_params.yaml  mapper_params_online_async.yaml
install/ball_follower/share/ball_follower/description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  visual_macros.xacro
install/ball_follower/share/ball_follower/environment/: ament_prefix_path.dsv  path.dsv
install/ball_follower/share/ball_follower/launch/: custom_nav2_bringup.launch.py  launch_sim.launch.py  rsp.launch.py  slam.launch.py
install/ball_follower/share/ball_follower/maps/: map_serial.pgm  map_serial.yaml
install/ball_follower/share/ball_follower/worlds/: cone  world3.py
install/ball_follower/share/ball_follower/worlds/Map3/: model.config  model.sdf
log/: latest_build  latest_list
src/bot/: CMakeLists.txt
src/bot/description/: lidar.xacro  robot_core.xacro
src/bot/launch/: launch_sim.launch.py  slam.launch.py
src/bot/src/: laser_remapper.cpp
src/bot/worlds/map1/: model.sdf
src/bot/worlds/map2/: model.sdf
